[package]
name = "light"
version = "0.1.0"
authors = ["Nokola <nikolami@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"

[profile.dev]
panic="abort"

[profide.release]
panic="abort"
